--- a/02_introduccion_a_django.ipynb
+++ b/02_introduccion_a_django.ipynb
@@ -102,9 +102,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: django in c:\\programdata\\anaconda3\\lib\\site-packages (2.2.1)\n",
+      "Requirement already satisfied: pytz in c:\\programdata\\anaconda3\\lib\\site-packages (from django) (2018.5)\n",
+      "Requirement already satisfied: sqlparse in c:\\programdata\\anaconda3\\lib\\site-packages (from django) (0.3.0)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "You are using pip version 10.0.1, however version 19.1.1 is available.\n",
+      "You should consider upgrading via the 'python -m pip install --upgrade pip' command.\n"
+     ]
+    }
+   ],
    "source": [
     "!pip install django"
    ]
@@ -134,7 +152,12 @@
     "\n",
     "```\n",
     "django-admin <subcomando> <argumentos>\n",
-    "```"
+    "```\n",
+    "\n",
+    "Donde:\n",
+    "\n",
+    "* ```<subcomando>``` corresponde a una instrucción específica.\n",
+    "* ```<argumentos>``` corersponde a una secuencia de valores específicos."
    ]
   },
   {
@@ -188,8 +211,12 @@
     "El comando ```django-admin startproject``` creará la estructura inicial de un proyecto, usando la siguiente sintaxis:\n",
     "\n",
     "```\n",
-    "django-admin startproject <ruta del directorio del proyecto>\n",
-    "```"
+    "django-admin startproject <nombre>\n",
+    "```\n",
+    "\n",
+    "Donde:\n",
+    "\n",
+    "* ```<nombre>``` corresponde al nombre del proyecto y cuya estructura será creada dentro de un subdirectorio del mismo nombre."
    ]
   },
   {
@@ -211,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "scrolled": false
    },
@@ -238,11 +265,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\josech\\Dropbox\\Codigo\\Pythonista\\Cursos\\py231\\tutorial\n"
+     ]
+    }
+   ],
    "source": [
     "%cd tutorial"
    ]
@@ -273,7 +308,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "El resultado sería algo similar a lo siguiente:\n",
+    "* El resultado sería algo similar a lo siguiente:\n",
     "\n",
     "```\n",
     ".\n",
@@ -285,9 +320,9 @@
     "    └── wsgi.py\n",
     "```\n",
     "\n",
-    "Se puede apreciar que en el directorio *tutorial* es encuentran:\n",
-    "* El script ```manage.py```\n",
-    "* Otro subdirectorio de nombre ```tutorial``` con la estructura de un paquete de Python."
+    "* Se puede apreciar que en el directorio *tutorial* es encuentran:\n",
+    "    * El script ```manage.py```\n",
+    "    * Otro subdirectorio de nombre ```tutorial``` con la estructura de un paquete de Python."
    ]
   },
   {
@@ -301,15 +336,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Este script hace uso de forma indirecta de ```django-admin``` para la gestión de un proyecto en particular con la siguiente sintaxis.\n",
+    "Este script hace uso de forma indirecta de ```django-admin``` para la gestión de un proyecto en particular con cualquiera de la siguientes sintaxis.\n",
     "\n",
     "```\n",
-    "<ruta>/manage.py <subcomando> <parámetros>\n",
+    "./manage.py <subcomando> <parámetros>\n",
+    "```\n",
+    "o\n",
+    "```\n",
+    "python manage.py <subcomando> <parámetros>\n",
     "```\n",
     "\n",
-    "A diferencia de ```django-admin```, es necesario definir la ruta en la que se encuentra el script.\n",
+    "Donde:\n",
     "\n",
-    "**Nota:** Se recomienda ejecutar ```manage.py``` desde el directorio en el que dicho script se encuentra. A partir de este momento se dará por hecho lo anterior."
+    "* ```<subcomando>``` corresponde a una instrucción específica.\n",
+    "* ```<argumentos>``` corersponde a una secuencia de valores específicos.\n",
+    "\n",
+    "**Nota:** Es necesario ejecutar el script ```manage.py``` desde el directorio en el que dicho script se encuentra. A partir de este momento se dará por hecho lo anterior."
    ]
   },
   {
@@ -337,11 +379,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Type 'manage.py help <subcommand>' for help on a specific subcommand.\n",
+      "\n",
+      "Available subcommands:\n",
+      "\n",
+      "[auth]\n",
+      "    changepassword\n",
+      "    createsuperuser\n",
+      "\n",
+      "[contenttypes]\n",
+      "    remove_stale_contenttypes\n",
+      "\n",
+      "[django]\n",
+      "    check\n",
+      "    compilemessages\n",
+      "    createcachetable\n",
+      "    dbshell\n",
+      "    diffsettings\n",
+      "    dumpdata\n",
+      "    flush\n",
+      "    inspectdb\n",
+      "    loaddata\n",
+      "    makemessages\n",
+      "    makemigrations\n",
+      "    migrate\n",
+      "    sendtestemail\n",
+      "    shell\n",
+      "    showmigrations\n",
+      "    sqlflush\n",
+      "    sqlmigrate\n",
+      "    sqlsequencereset\n",
+      "    squashmigrations\n",
+      "    startapp\n",
+      "    startproject\n",
+      "    test\n",
+      "    testserver\n",
+      "\n",
+      "[sessions]\n",
+      "    clearsessions\n",
+      "\n",
+      "[staticfiles]\n",
+      "    collectstatic\n",
+      "    findstatic\n",
+      "    runserver\n"
+     ]
+    }
+   ],
    "source": [
-    "!./manage.py help"
+    "!python manage.py help"
    ]
   },
   {
@@ -353,8 +446,16 @@
     "Para crear una aplicación se utiliza el siguiente comando especificando el directorio en el que se encontrará la aplicación dentro del directorio del proyecto.\n",
     "\n",
     "```\n",
-    "./manage.py startapp <directorio>\n",
-    "```"
+    "./manage.py startapp <nombre>\n",
+    "```\n",
+    "o\n",
+    "```\n",
+    "python manage.py startapp <nombre>\n",
+    "```\n",
+    "\n",
+    "Donde:\n",
+    "\n",
+    "* ```<nombre>``` corresponde al nombre de la aplicación y cuya estructura será creada dentro de un subdirectorio del mismo nombre."
    ]
   },
   {
@@ -373,13 +474,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "scrolled": false
    },
    "outputs": [],
    "source": [
-    "!./manage.py startapp main"
+    "!python manage.py startapp main"
    ]
   },
   {
@@ -426,36 +527,38 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "!tree"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Arranque  del servidor de aplicaciones de  un proyecto.\n",
     "\n",
     "```\n",
-    "<ruta>/manage.py runserver <rango de transmisión>:<puerto>\n",
-    "```"
+    "./manage.py runserver <rango de transmisión>:<puerto>\n",
+    "```\n",
+    "o\n",
+    "```\n",
+    "python manage.py runserver <'rango de transmisión'>:<puerto>\n",
+    "```\n",
+    "\n",
+    "Donde:\n",
+    "\n",
+    "* ```'<rango de transmisión>'``` corresponde a una máscara IP, un dominio o un host que serán las direcciones autorizadas para acceder al servidor de *Django*. \n",
+    "* ```<puerto>``` corresponde al número de puerto desde el cual será accesible el servidor de *Django*.\n",
+    "\n",
+    "**Notas:**\n",
+    "\n",
+    "* Si no se especifica el rango de transmisión, el servidor de *Django* sólo será accesible para ```localhost```.\n",
+    "* Si no se especifica el puerto, el servidor de *Django* estará disponible en el puerto ```8000```.\n",
+    "* Para que el servidor de *Django* esté disponible para todas las direcciones IP, se definirá el rango de transmisión ```'0.0.0.0'```."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
-    "\n",
     "A continuación se ejecutará el servidor web de *Django*, el cual desplegará la página que se genera por defecto.\n",
     "\n",
-    "El servidor de *Django* está configurado para atender peticiones de ```localhost``` en el puerto ```8000```, pero en este caso, se le indicará que atienda las peticiones desde cualquier IP, usando la máscara ``` 0.0.0.0``` en el puerto ```5000```.\n",
+    "El servidor de *Django* usando la máscara ``` '0.0.0.0'``` en el puerto ```5000```.\n",
     "\n",
     "**Nota:** \n",
     "Es necesario que el firewall de su equipo esté configurado para transmitir desde el puerto ```5000```. \n",
@@ -471,7 +574,7 @@
    },
    "outputs": [],
    "source": [
-    "! ./manage.py runserver 0.0.0.0:5000"
+    "!python manage.py runserver 0.0.0.0:5000"
    ]
   },
   {
@@ -506,7 +609,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
