--- a/07_peticiones_y_respuestas.ipynb
+++ b/07_peticiones_y_respuestas.ipynb
@@ -31,7 +31,7 @@
     "\n",
     "Si un cliente cuenta con las credenciales y los permisos adecuados, éste puede iniciar una sesión con un servidor. \n",
     "\n",
-    "Una sesión consiste en intercambio de peticiones (equests) y respuestas (responses) entre un cliente y un servidor.\n",
+    "Una sesión consiste en intercambio de peticiones (requests) y respuestas (responses) entre un cliente y un servidor.\n",
     "\n",
     "**Nota:** En capítulos subsecuentes se estudiarán temas relacionados a la creación de sesiones seguras y a la autenticación de usuarios."
    ]
@@ -55,13 +55,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Los objetos *request*.\n",
+    "## Los objetos ```request```.\n",
     "\n",
-    "A los objetos instanciados de la clase ```django.http.HttpRequest```, se les conoce como *request*. Utilizaremos este término para referirnos a dichos objetos.\n",
+    "A los objetos instanciados de la clase ```django.http.HttpRequest```, se les conoce como ```request```. A partir de este momento se utilizará dicho nombre para hacer referencia a dichos objetos.\n",
     "\n",
     "* El estado de estos objetos contiene información acerca de la petición formulada desde un cliente.\n",
     "* Además, estos objetos cuentan con métodos que nos permiten facilitar el manejo de las peticiones.\n",
-    "* *Django* ingresa un objeto *request* como el primer argumento de una función de vista."
+    "* *Django* ingresa un objeto ```request``` como el primer argumento de una función de vista."
    ]
   },
   {
@@ -101,48 +101,66 @@
     "La siguiente es la sintaxis para instanciar un objeto a partir de la clase  ```django.http.HttpResponse```:\n",
     "```\n",
     "django.http.HttpResponse(<contenido>)\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Atributos de la clase *django.http.HttpResponse*.\n",
+    "```\n",
     "\n",
-    "* *content*\n",
-    "* *charset*\n",
-    "* *status_code*\n",
-    "* *reason_phrase*\n",
-    "* *streaming*\n",
-    "* *closed*"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Ejemplo:**\n",
+    "Donde:\n",
     "\n",
-    "El archivo *src/07/views.py*  contiene las funciones de vista:\n",
-    "* *index()*,  la cual crea y regresa un objeto instanciado de *django.http.HttpResponse*.\n",
-    "* *vista()* la cual regresa *None*."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%cat src/07/views.py"
+    "* ```<contenido>``` es el objeto cuyo contenido será enviado como respuesta al cliente que realizó la petición."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* La siguiente celda sustituirá al archivo *tutorial/main/views.py* por el archivo *src/07/views.py*."
+    "### Atributos de la clase ```django.http.HttpResponse```.\n",
+    "\n",
+    "* ```content```: el cual almacena el contenido que será emviado al cliente.\n",
+    "* ```charset```: el cual inidica la codificación de caracteres (charset) al que corresponde el contenido. En caso de no indicar nada, se usará el charset del cliente.\n",
+    "* ```status_code```: el cual contiene el número de código de estado HTTP.\n",
+    "* ```reason_phrase```: contiene una cadena de caracteres explicando la razón por la que se emite el código de estado.\n",
+    "* ```streaming```: indica si el contenido es un flujo de datos.\n",
+    "* ```closed```: Indica si la conexión está cerrada."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ejemplo ilustrativo.\n",
+    "\n",
+    "El archivo ```src/07/views.py```  contiene el siguiente código:\n",
+    "\n",
+    "``` python\n",
+    "from django.http import HttpResponse\n",
+    "\n",
+    "def index(request):\n",
+    "    return HttpResponse(\"<h1>Hola, mundo.</h1>\")\n",
+    "\n",
+    "def vista(request):\n",
+    "    return HttpResponse('<ul><li>URL: {}</li><li>Método: {}</li><li>Codificación: {}</li><li>Argumentos: {}</li></ul>'.format(request.path, request.method, request.encoding, request.GET.dict()))\n",
+    "```\n",
+    "Las funciones definidas son:\n",
+    "\n",
+    "* ```index()```,  la cual crea y regresa un objeto instanciado de ```django.http.HttpResponse``` cuyo contenido es una cadena de caracteres.\n",
+    "* ```vista()``` la cual regresa un objeto instanciado de ```django.http.HttpResponse``` cuyo contenido es una cadena de caracteres a la que se le añadirán los siguientes atributos del objeto ```request```.\n",
+    "    * ```path```.\n",
+    "    * ```method```.\n",
+    "    * ```encoding```.\n",
+    "    * El objeto tipo ```dict``` obtenido a partir de la ejecución del método ```dict()``` del atributo ```GET```."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* La siguiente celda sustituirá al archivo ```tutorial/main/views.py``` con el archivo ```src/07/views.py```."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Para las plataformas GNU/Linux y MacOS X. "
    ]
   },
   {
@@ -155,6 +173,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Para la plataforma Windows."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!copy src\\07\\views.py tutorial\\main\\views.py"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -162,14 +196,14 @@
    },
    "outputs": [],
    "source": [
-    "%cat tutorial/main/views.py"
+    "%pycat tutorial/main/views.py"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Inicie el servidor."
+    "* Las siguientes celdas iniciarán el servidor."
    ]
   },
   {
@@ -200,7 +234,7 @@
    },
    "outputs": [],
    "source": [
-    "! ./manage.py runserver 0.0.0.0:5000"
+    "!python manage.py runserver 0.0.0.0:5000"
    ]
   },
   {
@@ -209,15 +243,6 @@
    "source": [
     "* Al acceder a [http://localhost:5000/main/vista](http://localhost:5000/main/vista) se mostrará el método usado por el cliente.\n",
     "* Al acceder a [http://localhost:5000/main/vista?nombre=jose](http://localhost:5000/main/vista?nombre=jose) se mostrará el método usado por el cliente."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## TAREA.\n",
-    "\n",
-    "Modifique la función *calificaciones()* del archivo *tutorial/main/views.py*  para que regrese un recurso en particular."
    ]
   },
   {
@@ -245,7 +270,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
