--- a/08_gestion_de_urls.ipynb
+++ b/08_gestion_de_urls.ipynb
@@ -11,6 +11,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Gestión de *URLs*."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**ADVERTENCIA:**  \n",
     "\n",
     "Para poder realizar exitosamente los ejercicios de esta notebook, es necesario haber seguido al pie de la letra y en orden sucesivo las instrucciones de todas las notebooks previas."
@@ -20,48 +27,111 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "El módulo *django.urls* cuenta con las herramientas que permiten identificar y filtrar URLs de modo tal que pueda crear servicios dinámicos a partir de la información contenida en ellos.\n",
+    "El módulo ```django.urls``` cuenta con herramientas que permiten identificar y filtrar *URLs*  de modo tal que pueda crear servicios dinámicos a partir de la información contenida en ellos.\n",
     "\n",
-    "https://docs.djangoproject.com/en/2.1/topics/http/urls/"
+    "La documentacióm corresondiente puede ser consultada en https://docs.djangoproject.com/en/2.1/topics/http/urls/"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Conversión de segmentos de una URL.\n",
+    "## Identificación de segmentos en una *URL*.\n",
     "\n",
-    "Previamente se estudió la funcionalidad básica de *django.urls.path()* realizando las siguientes operaciones:\n",
+    "Previamente se estudió la funcionalidad básica de ```django.urls.path()``` realizando las siguientes operaciones:\n",
     "\n",
-    "* Identificando un patrón de URL.\n",
+    "* Identificando un patrón de *URL*.\n",
     "* Llamando a una función de vista relacionada con el patrón.\n",
-    "* Ingresando el objeto *request* como argumento de la función de vista.\n",
+    "* Ingresando automáticamente al objeto ```request``` como argumento de la función de vista.\n",
     "\n",
-    "Esta funcionalidad puede ser extendida permitiendo no sólo identificar un patrón de URL, sino identificando y obteniendo datos a partir de la URL.\n",
+    "Es convieniente recordar que la sintaxis de la función ```django.urls.path()``` es:\n",
     "\n",
-    "La sintaxis el la siguiente:\n",
-    "\n",
-    "* La cadena de caracteres correspondiente al patron de URL puede contener un texto delimitado por los signos *&lt;* y *&gt;*.\n",
-    "* Este texto delimitado define un par ```<tipo>:<nombre>```.\n",
-    "* En caso de que el segmento de URL de una petición coincida con el tipo de dato definido, este será capturado como un valor y ligado al nombre correspondiente.\n",
-    "\n",
-    "```python\n",
-    "path('{patrón}/<<tipo>:<nombre 1>>/<{<tipo>:<nombre 2>>/ ... / <<tipo>:<nombre n>>', <funcion de vista>, <argumentos>)\n",
     "```\n",
-    "De tal forma que si el segmento de la URL coincide con el tipo inidicado, éste será ligado al nombre con el que se encuentra relacionado."
+    "```python\n",
+    "django.urls.path('<patrón>', <funcion de vista>, <argumentos>)\n",
+    "```\n",
+    "\n",
+    "* Donde  ```<patrón>``` es una cadena de cartacteres que debe de coincidir con la *URL*. "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Tipos de datos extraibles de una URL:\n",
+    "### Segmentos indentificables en una *URL*.\n",
     "\n",
-    "* *string*: es el tipo de datos por defecto y corresponde a una cadena de caracteres.\n",
-    "* *int*: corrsponde a un número entero positivo, incluyendo al cero.\n",
-    "* *slug*: es una combinación de caracteres ASCII, guiones medios (-) y guiones bajos (\\_)\n",
-    "* *uuid*: para las secuencias que se apegan al [RFC 4122](https://tools.ietf.org/html/rfc4122.html).\n",
-    "* *path*: captura el segmento de la URL incluyendo las diagonales (*/*)."
+    "La función ```django.urls.path()``` puede:\n",
+    "* Identificar segmentos de caracteres delimitados por el caracter ```/```.\n",
+    "* Convertir cada cadena de caracteres segmentada en un tipo de dato específico.\n",
+    "* Asignarle un nombre a cada valor obtenido.\n",
+    "\n",
+    "### Tipos de datos extraibles de un segmento de *URL*:\n",
+    "\n",
+    "Los tipos de datos en los que puede ser convertido un segmento son los siguiientes:\n",
+    "\n",
+    "* ```string```: es el tipo de datos por defecto y corresponde a una cadena de caracteres.\n",
+    "* ```int```: corrsponde a un número entero positivo, incluyendo al cero.\n",
+    "* ```slug```: es una combinación de caracteres *ASCII*, guiones medios ```-``` y guiones bajos ```_```.\n",
+    "* ```uuid```: para las secuencias que se apegan a la especificación [*RFC 4122*](https://tools.ietf.org/html/rfc4122.html).\n",
+    "* ```path```: captura el segmento de la *URL* incluyendo las diagonales ```/```."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Ejemplo:**\n",
+    "\n",
+    "* La *URL* ```main/53/azul/01``` puede ser segmentada obteniendo las cadenas de caracteres:\n",
+    "    * ```'53'```.\n",
+    "    * ```'azul'```.\n",
+    "    * ```'01'```.\n",
+    "* Cada uno de estos segmentos puede ser convertido en un tipo compatible. Por defecto, todos los segmentos son de tipo ```string```."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Definción del patrón de extracción de segmentos.\n",
+    "\n",
+    "La cadena de caracteres que define a un patrón con sefgmentos extaibles tend'ria una sintaxcis similar a la siguiente:\n",
+    "\n",
+    "```\n",
+    "'<patrón inicial>/<segmento 1>/<segmento 2>/.../<segmento n>'\n",
+    "```\n",
+    "\n",
+    "Donde:\n",
+    "\n",
+    "* ```<patrón inicial>``` es un patrón específico que debe de coincidir en la URL.\n",
+    "* ```<segmento X>``` corresponde a cada segmento a extraer."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Definición de nombre y tipo de cada segmento.\n",
+    "\n",
+    "Cada segmento define una sintaxis ```tipo:nombre``` encerrado entre los signos de \"menor que\" ```<``` y \"mayor que\" ```>```.  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Ejemplo:**\n",
+    " * Para capturar los segmentos de la *URL* ```main/53/azul/01``` se usaría el siguiente patrón:\n",
+    " \n",
+    " ``` python\n",
+    " 'main/<int:codigo>/<string:color>/<int:cantidad>'\n",
+    "```\n",
+    "* Se obtendrían:\n",
+    "    * El objeto con nombre ```codigo```, de tipo ```ìnt``` y con valor de ```53```.\n",
+    "    * El objeto con nombre ```color```, de tipo ```string``` y con valor de ```'azul'```.\n",
+    "    * El objeto con nombre ```cantidad```, de tipo ```ìnt``` y con valor de ```1```.   \n",
+    "    \n",
+    "Estos valores serían usados como argumentos adicionales a ```request``` en la función de vista correspondiente."
    ]
   },
   {
@@ -70,20 +140,28 @@
    "source": [
     "## Identificación de rutas con expresiones regulares.\n",
     "\n",
-    "La función *django.url.re_path()* permite hacer búsquedas que coincidan con una expresión regular.\n",
-    "```python\n",
+    "La función ```django.url.re_path()``` permite hacer búsquedas que coincidan con una expresión regular.\n",
+    "\n",
+    "```\n",
     "re_path(r'<expresión regular>' <función de vista>)\n",
     "```\n",
-    "En caso de que la expresión regular extraiga datos, estos datos se ingresarán como argumentos después del objeto *request*. \n"
+    "En caso de que la expresión regular extraiga datos, estos datos se ingresarán como argumentos después del objeto ```request```. \n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Ejemplos:**\n",
+    "## Ejemplo ilustrativo."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### El archivo ```src/08/urls.py```.\n",
     "\n",
-    "El archivo *src/08/urls.py* contiene lo siguiente:\n",
+    "El archivo ```src/08/urls.py``` contiene lo siguiente:\n",
     "\n",
     "\n",
     "``` python\n",
@@ -91,22 +169,29 @@
     "from . import views\n",
     "\n",
     "urlpatterns = [path('', views.index, name=\"inicio\"), \n",
-    "               path('calif', views.calificaciones),\n",
+    "               path('vista', views.vista),\n",
     "               re_path(r'^claves/(?P<clave>[0-9]{4}$)', views.clave),\n",
     "               path('claves/<int:numero>', views.numero),\n",
     "               path('claves/<str:nombre>', views.saluda),]\n",
     "```\n",
     "\n",
-    "* En caso de que se ingrese una URL con exatamente 4 dígitos después de *...main/claves/*, se ejecutará la función *views.clave()* y se enviarán los 4 dígitos como segundo argumento.\n",
-    "* En caso de que se ingrese una URL con números que no sean de 4 dígitos dígitos después de *...main/claves/*, se ejecutará la función *views.numero()* y se enviará el número entero como segundo argumento.\n",
-    "* En caso de que se ingrese una URL con algo que no cumpla las condiciones previas después de *...main/claves/*, se ejecutará la función *views.saluda()* y se enviará el contenido como segundo argumento."
+    "* En caso de que se ingrese una *URL* con exactamente 4 dígitos después de ```main/claves/```, se ejecutará la función ```views.clave()``` y se enviarán los 4 dígitos como segundo argumento.\n",
+    "* En caso de que se ingrese una *URL* con números que no sean de 4 dígitos después de ```main/claves/```, se ejecutará la función ```views.numero()``` y se enviará el número entero como segundo argumento.\n",
+    "* En caso de que se ingrese una *URL* con algo que no cumpla las condiciones previas después de ```main/claves/```, se ejecutará la función ```views.saluda()``` y se enviará el contenido como segundo argumento."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* La siguiente celda sustituirá al archivo *tutorial/main/urls.py*  con el archivo *src/08/urls.py*."
+    "* A continuación se sustituirá al archivo ```tutorial/main/urls.py```  con el archivo ```src/08/urls.py```."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Para la plataforma GNU/Linux y MacOS X."
    ]
   },
   {
@@ -115,20 +200,42 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%cp src/08/urls.py tutorial/main/urls.py "
+    "!cp src/08/urls.py tutorial/main/urls.py "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "El archivo *src/08/views.py contiene entre otras a las funciones *clave()*, *numero()* y *saluda()*."
+    "* Para la plataforma Windows."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!copy src\\08\\urls.py tutorial\\main\\urls.py "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pycat tutorial\\main\\urls.py "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### El archivo ```src/08/views.py```.\n",
+    "\n",
+    "El archivo ```src/08/views.py``` contiene el siguiente código:\n",
+    "\n",
     "``` python\n",
     "from django.http import HttpResponse\n",
     "\n",
@@ -137,16 +244,16 @@
     "    return HttpResponse(\"<h1>Hola, mundo.</h1>\")\n",
     "\n",
     "\n",
-    "def calificaciones(request):\n",
-    "    return HttpResponse(request.method)\n",
+    "def vista(request):\n",
+    "    return HttpResponse('<ul><li>URL: {}</li><li>Método: {}</li><li>Codificación: {}</li><li>Argumentos: {}</li></ul>'.format(request.path, request.method, request.encoding, request.GET.dict()))\n",
     "\n",
     "\n",
     "def clave(request, clave):\n",
-    "    return HttpResponse('<h1>Introdujiste la clave: {}</h1>'.format(str(clave)))\n",
+    "    return HttpResponse('<h1>Ingresaste la clave: {}</h1>'.format(str(clave)))\n",
     "\n",
     "\n",
     "def numero(request, numero):\n",
-    "    return HttpResponse('<h1>Introdujiste el número: {}</h1>'.format(str(numero)))\n",
+    "    return HttpResponse('<h1>Ingresaste el número: {}</h1>'.format(str(numero)))\n",
     "\n",
     "\n",
     "def saluda(request, nombre):\n",
@@ -158,7 +265,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* La siguiente celda sustituirá al archivo *tutorial/main/views.py*  con el archivo *src/08/views.py*."
+    "* A continuación se sustituirá al archivo ```tutorial/main/views.py```  con el archivo ```src/08/views.py```."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Para la plataforma GNU/Linux y MacOS X."
    ]
   },
   {
@@ -167,14 +281,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%cp src/08/views.py tutorial/main/views.py "
+    "!cp src/08/views.py tutorial/main/views.py "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Inicie el servidor."
+    "* Para la plataforma Windows."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!copy src\\08\\views.py tutorial\\main\\views.py "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pycat tutorial/main/views.py "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* A continuación se iniciará el servidor de *Django*."
    ]
   },
   {
@@ -205,7 +344,7 @@
    },
    "outputs": [],
    "source": [
-    "! ./manage.py runserver 0.0.0.0:5000"
+    "!python manage.py runserver 0.0.0.0:5000"
    ]
   },
   {
@@ -246,7 +385,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
