--- a/10_clases_de_django_http_servidor.ipynb
+++ b/10_clases_de_django_http_servidor.ipynb
@@ -11,6 +11,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Las clases del módulo ```django.http``` (servidor)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**ADVERTENCIA:**  \n",
     "\n",
     "Para poder realizar exitosamente los ejercicios de esta notebook, es necesario haber seguido al pie de la letra y en orden sucesivo las instrucciones de todas las notebooks previas."
@@ -20,12 +27,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Notas preliminares sobre el capítulo 10.\n",
+    "## Notas preliminares sobre este capítulo.\n",
     "\n",
     "Este capítulo está dividido en dos notebooks:\n",
     "\n",
     "* La parte teórica y del servidor, corresponde al presente documento.\n",
-    "* La parte del cliente, corresponde a la notebook [11_cliente de_operaciones_con_http.ipynb](11_cliente_de_operaciones_con_http.ipynb).\n",
+    "* La parte del cliente, corresponde a la notebook [```11_clases_de_django_http_cliente.ipynb```](11_clases_de_django_http_cliente.ipynb).\n",
     "\n",
     "La notebook del cliente consume los recursos que el servidor que esta notebook despliega, por lo que es necesario que el servidor de Django de esta notebook esté en ejecución cuando la notebook del cliente se esté ejecutando."
    ]
@@ -38,21 +45,21 @@
     "\n",
     "Este paquete cuenta con herramientas diseñadas para gestionar las peticiones y repuestas más comunes de *HTTP*, incluyendo algunos mensajes de estado.\n",
     "\n",
-    "En el capítulo [*07_peticiones_y_respuestas.ipynb*](07_peticiones_y_respuestas.ipynb) se describió someramente lo siguiente:\n",
+    "En el capítulo [```07_peticiones_y_respuestas.ipynb```](07_peticiones_y_respuestas.ipynb) se describió someramente lo siguiente:\n",
     "\n",
-    "* El modo en el que los datos de las peticiones (*requests*) enviadas por un cliente son recibidas por el servidor de *Django* y contenidas en objetos instanciados de la clase *django.http.HttpRequest*.\n",
-    "* El modo en el que una función de vista  permite enviar una respuestas (*responses*) a un cliente por medio de una instancia de la clase *django.http.HttpResponse*. \n",
+    "* El modo en el que los datos de las peticiones (requests) enviadas por un cliente son recibidas por el servidor de *Django* y contenidas en objetos instanciados de la clase ```django.http.HttpRequest```.\n",
+    "* El modo en el que una función de vista  permite enviar una respuestas (responses) a un cliente por medio de una instancia de la clase ```django.http.HttpResponse```. \n",
     "\n",
-    "En este capítulo se explorarán a detalle los recursos del módulo *django.http*, incluyendo más información sobre *django.http.HttpRequest* y *django.http.HttpResponse*.\n",
+    "En este capítulo se explorarán a detalle algunos recursos del módulo ```django.http```, incluyendo más información sobre ```django.http.HttpRequest``` y ```django.http.HttpResponse```.\n",
     "\n",
-    "La referencia de este paquete puede ser consultada en https://docs.djangoproject.com/en/2.1/ref/request-response/."
+    "La referencia de este paquete puede ser consultada en https://docs.djangoproject.com/en/2.2/ref/request-response/."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Detalles sobre la clase *django.http.HttpRequest*."
+    "## Detalles sobre la clase ```django.http.HttpRequest```."
    ]
   },
   {
@@ -63,23 +70,24 @@
     "\n",
     "#### Métodos informativos.\n",
     "\n",
-    "* *get_host()*, regresa la URL del servidor.\n",
-    "* *get_port()*, regresa el puerto de conexión al servidor.\n",
-    "* *get_full_path()*, regresa la URL incluyendo las peticiones.\n",
-    "* *get_full_path_info()* similar a *get_full_path()*, pero utiliznado el atributo *path_info()*.\n",
-    "* *build_absolute_uri()*\n",
-    "* *is_secure()*\n",
+    "* ```get_host()``` regresa la `*URL* del servidor.\n",
+    "* ```get_port()``` regresa el puerto de conexión al servidor.\n",
+    "* ```get_full_path()``` regresa la URL incluyendo las peticiones.\n",
+    "* ```ge_full_path_info()``` es similar a ```get_full_path()```, pero utiliznado el atributo ```path_info```.\n",
+    "* ```build_absolute_uri()``` regresa la *URL* absoluta.\n",
+    "* ```is_secure()``` indica si la conexión es segira.\n",
     "\n",
     "#### Métodos de XML.\n",
     "\n",
-    "* *is_ajax()*\n",
-    "* *read()*\n",
-    "* *readline()*\n",
-    "* *\\_\\_iter\\_\\_()*\n",
+    "* ```is_ajax()``` indica si el contenido es AJAX.\n",
+    "* ```read()``` lee todo el contenido de forma similar al método ```read()``` de ```open()```.\n",
+    "* ```readline()``` lee una línea del contenido de forma similar al método ```readline()``` de ```open()```.\n",
+    "* ```readline()``` lee cada línea del contenido y regresaun un objeto tipo ```list``` de forma similar al método ```readlines()``` de ```open()```.\n",
+    "* ```__iter__()``` regresa un iterador.\n",
     "\n",
     "#### Métodos de *cookies*.\n",
     "\n",
-    "* *get_signed_cookie()*"
+    "* ```get_signed_cookie()``` recibe una cookie firmada."
    ]
   },
   {
@@ -88,11 +96,12 @@
    "source": [
     "## La clase *django.http.QueryDict*.\n",
     "\n",
-    "Los atributos *GET* y *PUT* de la clase *django.http.HtmlRequest* son instancias de la clase *django.http.QueryDict*.\n",
+    "Los atributos ```GET``` y ```PUT``` de la clase ```django.http.HtmlRequest``` son instancias de la clase ```django.http.QueryDict```.\n",
     "\n",
-    "La clase *django.http.QueryDict* es similar a un objeto tipo *dict*, con la diferencia de que puede contener más de un elemento con el mismo identificador.\n",
+    "La clase ```django.http.QueryDict``` es similar a un objeto tipo ```dict```, con la diferencia de que puede contener más de un elemento con el mismo identificador, el cual es guradado en un objeto de tipo ```list``.\n",
     "\n",
-    "La clase *django.http.QueryDict* es inmutable.\n",
+    "La clase ```django.http.QueryDict``` es inmutable.\n",
+    "\n",
     "``` python\n",
     "QueryDict.(query_string=None, mutable=False, encoding=None)\n",
     "````"
@@ -102,33 +111,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Métodos de *django.http.QueryDict*.\n",
-    "Cuenta con los siguientes métodos que son similares a los del tipo *dict*:\n",
-    "* *clear()*\n",
-    "* *pop()*\n",
-    "* *popitem()*\n",
-    "* *setdefault()*\n",
-    "* *update()*\n",
-    "* *items()*\n",
-    "* *values()*\n",
+    "### Métodos de ```django.http.QueryDict```.\n",
+    "\n",
+    "Cuenta con los siguientes métodos que son similares a los del tipo ```dict```:\n",
+    "* ```clear()```.\n",
+    "* ```pop()````.\n",
+    "* ```popitem()```.\n",
+    "* ```setdefault()```.\n",
+    "* ```update()```.\n",
+    "* ```items()```.\n",
+    "* ```values()```.\n",
     "\n",
     "#### Métodos de gestión.\n",
     "\n",
-    "* *\\_\\_setitem\\_\\_()*\n",
-    "* *\\_\\_getitem\\_\\_()*\n",
-    "* *\\_\\_contains\\_\\_()*\n",
-    "* *get()*\n",
-    "* *dict()*\n",
-    "* *copy()*\n",
-    "* *urlencode()*\n",
+    "* ```__setitem__()```.\n",
+    "* ```__getitem__()```.\n",
+    "* ```_contains__()```.\n",
+    "* ```get()```.\n",
+    "* ```dict()```.\n",
+    "* ```copy()```.\n",
+    "* ```urlencode()```.\n",
     "\n",
     "#### Métodos de listas.\n",
     "\n",
-    "* *getlist()*\n",
-    "* *setlist()*\n",
-    "* *appendlist()*\n",
-    "* *setlistdefault()*\n",
-    "* *lists()*"
+    "* ```getlist()```.\n",
+    "* ```setlist()```.\n",
+    "* ```appendlist()```.\n",
+    "* ```setlistdefault()```.\n",
+    "* ```lists()```."
    ]
   },
   {
@@ -150,11 +160,11 @@
     "\n",
     "#### Métodos de gestión.\n",
     "\n",
-    "* *\\_\\_setitem\\_\\_()*\n",
-    "* *\\_\\_getitem\\_\\_()*\n",
-    "* *\\_\\_delitem\\_\\_()*\n",
-    "* *has_header()*\n",
-    "* *setdefault()*\n",
+    "* ```__setitem__()```\n",
+    "* ```__getitem__()```\n",
+    "* ```__delitem__()```\n",
+    "* ```has_header()```\n",
+    "* ```setdefault()```\n",
     "\n",
     "\n",
     "\n",
@@ -326,7 +336,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
