--- a/11_clases_de_django_http_cliente.ipynb
+++ b/11_clases_de_django_http_cliente.ipynb
@@ -8,12 +8,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "https://docs.djangoproject.com/en/2.2/ref/contrib\n",
-    "\n",
-    "https://docs.djangoproject.com/en/2.2/ref/contrib/admin"
+    "from requests import post, get"
    ]
   },
   {
@@ -21,21 +21,73 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "respuesta_get = get(\"http://localhost:5000/main/otro_error\")"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "respuesta_get.status_code"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "respuesta_get.content"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "datos = {\"nombre\": \"Juan\",\"primer_apellido\": \"Pérez\",  \"segundo_apellido\":\"Sánchez\",\n",
+    "        \"carrera\": \"Medicina\", \"semestre\": 7, \"promedio\": 8.9, \"al_corriente\": True}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "respuesta_post = post(\"http://localhost:5000/main/contenido\", data=datos)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "respuesta_post.status_code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "respuesta_post.json()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "respuesta_post.url"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -62,7 +114,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
