--- a/06_urls_y_funciones_de_vista.ipynb
+++ b/06_urls_y_funciones_de_vista.ipynb
@@ -22,15 +22,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "! tree tutorial"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -206,13 +197,14 @@
     "Esta función permite relacionar a un patrón de *URL* a una función.\n",
     "\n",
     "```\n",
-    "django.urls.path('<patrón>', <función>, kwargs, name='<nombre>')\n",
+    "django.urls.path('<patrón>', <función>, <kwargs>, name='<nombre>')\n",
     "```\n",
     "Donde:\n",
     "\n",
-    "* ```patrón de ruta``` corresponde a un patrón de *URL*.\n",
-    "* ```función``` corresponde una función. \n",
-    "* ```nombre``` es el nombre que se le dará a esta relación (opcional).\n"
+    "* ```<patrón>``` corresponde a un patrón de *URL*.\n",
+    "* ```<función>``` corresponde una función. \n",
+    "* ```<kwargs>``` corresponde a argumentos ```clave=valor```.\n",
+    "* ```<nombre>``` es el nombre que se le dará a esta relación (opcional).\n"
    ]
   },
   {
@@ -231,8 +223,8 @@
     "\n",
     "Donde:\n",
     "\n",
-    "* ```patrón de ruta``` corresponde a un patrón de *URL*.\n",
-    "* ```módulo``` corresponde un archivo que contenga una estructura ```urls.py``` expresado como módulo. "
+    "* ```<patrón>``` corresponde a un patrón de *URL*.\n",
+    "* ```<módulo>``` corresponde un archivo que contenga una estructura ```urls.py``` expresado como módulo. "
    ]
   },
   {
@@ -272,12 +264,37 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "   * En entornos Linux y MacOS X."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "!cp src/06/tutorial_urls.py tutorial/tutorial/urls.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "  * En entornos Windows."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "%cp src/06/tutorial_urls.py tutorial/tutorial/urls.py"
+    "!copy src\\06\\tutorial_urls.py tutorial\\tutorial\\urls.py"
    ]
   },
   {
@@ -323,12 +340,37 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* En entornos Linux y MacOS X."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "!cp src/06/main_urls.py tutorial/main/urls.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "  * En entornos Windows."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "%cp src/06/main_urls.py tutorial/main/urls.py"
+    "!copy src\\06\\main_urls.py tutorial\\main\\urls.py"
    ]
   },
   {
@@ -430,12 +472,35 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* En entornos Linux o MacOS X."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "%cp src/06/views.py tutorial/main/views.py"
+    "!cp src/06/views.py tutorial/main/views.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* En entornos Windows."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!copy src\\06\\views.py tutorial\\main\\views.py"
    ]
   },
   {
@@ -456,9 +521,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\josech\\Dropbox\\Codigo\\Pythonista\\Cursos\\py231\\tutorial\n"
+     ]
+    }
+   ],
    "source": [
     "%cd tutorial"
    ]
@@ -482,14 +555,14 @@
    },
    "outputs": [],
    "source": [
-    "! ./manage.py runserver 0.0.0.0:5000"
+    "!python manage.py runserver 0.0.0.0:5000"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Al acceder a [```http://localhost:5000/admin```](http://localhost:5000/admin) aparecerá la interfaz de administración del proyecto.\n",
+    "* Al acceder a [```http://localhost:5000/admin```](http://localhost:5000/admin) aparecerá una pantalla de registro.\n",
     "* Al acceder a [```http://localhost:5000/main/```](http://localhost:5000/main/) aparecerá un mensaje de encabezado desplegando ```Hola, mundo.```.\n",
     "* Al acceder a [```http://localhost:5000/main/vista```](http://localhost:5000/main/vista) se mostrará un mensaje de error. Debido a que *Django* está configurado en modo de depuración, desplegará los detalles del error de ejecución.\n",
     "* Al acceder a cualquier otra *URL* distinta a las indicadas, se mostrará un mensaje de error ```404```. Debido a que *Django* está configurado en modo de depuracion, desplegará los detalles y los patrones de ```URL``` válidos."
@@ -520,7 +593,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
