--- a/09_json_con_django.ipynb
+++ b/09_json_con_django.ipynb
@@ -23,9 +23,18 @@
    "source": [
     "## El formato *JSON*.\n",
     "\n",
-    "*JSON* es el acrónimo de Javascript Object Notation y antes de las modificaciones publicadas en el estándar *ECMAScript 2015*, correspondía al modo en el que se definen objetos en Javascript. Sin embargo, la notación es tan simple y práctica que ha sido adoptada como un formato para la transmisión de datos y ha evolucionado de forma paralela a Javascript.\n",
+    "*JSON* es el acrónimo de Javascript Object Notation y antes de las modificaciones publicadas en el estándar [*ECMAScript 2015*](https://www.ecma-international.org/ecma-262/6.0/), correspondía al modo en el que se definen objetos en Javascript. Sin embargo, la notación es tan simple y práctica que ha sido adoptada como un formato para la transmisión de datos y ha evolucionado de forma paralela a Javascript.\n",
     "\n",
     "Para aprender más acerca de *JSON* puede consultar esta liga: https://www.w3schools.com/js/js_json_intro.asp"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## El paquete *json* de Python.\n",
+    "\n",
+    "Este paquete *json* cuenta con una biblioteca de herramientas capaces transformar objetos de Python a cadenas de caracteres con una estructura apegada a *JSON* y viceversa."
    ]
   },
   {
@@ -41,18 +50,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## El paquete *json* de Python.\n",
+    "### Las funciones ```json.dumps()``` y ```json.loads()```.\n",
     "\n",
-    "Este paquete *json* cuenta con una biblioteca de herramientas capaces transformar objetos de Python a cadenas de caracteres con una estructura apegada a *JSON* y viceversa."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Las funciones *json.dumps()* y *json.loads()*.\n",
-    "\n",
-    "Estas dos funciones permiten tranformar cadenas de caracteres que contengan una estructura de datos apegadas a *JSON* y objetos de Python (primordialmente objetos tipo *dict*)."
+    "Estas dos funciones permiten tranformar cadenas de caracteres que contengan una estructura de datos apegadas a *JSON* y objetos de Python (primordialmente objetos tipo ```dict```)."
    ]
   },
   {
@@ -60,7 +60,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "#### La función *json.dumps()*.\n",
+    "#### La función ```json.dumps()```.\n",
     "Transforma a un objeto ingresada como primer parámetro a una cadena de texto en formato *JSON*.\n",
     "\n",
     "**Sintaxis:**\n",
@@ -76,7 +76,7 @@
    "source": [
     "**Ejemplo:**\n",
     "\n",
-    "* Se aplicará la función *json.dumps* al objeto tipo *dict* con nombre *estudiante*."
+    "* Se aplicará la función ```json.dumps``` al objeto tipo ```dict``` con nombre ```estudiante```."
    ]
   },
   {
@@ -101,7 +101,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* La cadena de caracteres resultante se ligará al nombre *estudiante_json* y s eutilizará en los ejemplos siguientes. "
+    "* A la cadena de caracteres resultante se le dará el nombre ```estudiante_json``` y se utilizará en los ejemplos siguientes. "
    ]
   },
   {
@@ -117,9 +117,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### La función *json.loads()*\n",
+    "#### La función ```json.loads()```.\n",
     "\n",
-    "Esta función transforma una cadena de caracteres que contiene información en formato *JSON* y la transforma en un objeto de tipo *dict*.\n",
+    "Esta función transforma una cadena de caracteres que contiene información en formato *JSON* y la transforma en un objeto de tipo ```dict```.\n",
     "\n",
     "**Sintaxis:**\n",
     "\n",
@@ -134,7 +134,7 @@
    "source": [
     "**Ejemplo:**\n",
     "\n",
-    "* Se utilizará el objeto tipo *str* llamado *estudiante_json* para recuperar los datos y transferirlos a un objeto de Python llamado *nuevo_estudiante*."
+    "* Se utilizará el objeto ```estudiante_json``` para recuperar los datos y transferirlos a un objeto llamado ```nuevo_estudiante```."
    ]
   },
   {
@@ -159,7 +159,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Aún cuando los datos de *nuevo_estudiante* son los mismos de *estudiante*, no son el mismo objeto."
+    "* Aún cuando los datos de ```nuevo_estudiante``` son los mismos de ```estudiante```, no son el mismo objeto."
    ]
   },
   {
@@ -184,7 +184,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Las funciones *json.dump()* y *json.load()*.\n",
+    "### Las funciones ```json.dump()``` y ```json.load()```.\n",
     "\n",
     "Estas dos funciones realizan tranformaciones con *JSON*, pero a partir de archivos."
    ]
@@ -193,14 +193,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### La función *json.dump()*.\n",
+    "#### La función ```json.dump()```.\n",
     "Transforma a un objeto ingresado como primer parámetro a una cadena de texto en formato *JSON* y la guarda en un objeto de tipo archvo que se ingresa como segundo parámetro.\n",
     "\n",
     "**Sintaxis:**\n",
     "\n",
     "```\n",
     "json.dump(<objeto>, <archivo>)\n",
-    "```"
+    "```\n",
+    "\n",
+    "Donde:\n",
+    "\n",
+    "* ```<archivo>``` corresponde a un objeto creado mediante la función ```open()``` en modo de escritura."
    ]
   },
   {
@@ -209,8 +213,8 @@
    "source": [
     "**Ejemplo:**\n",
     "\n",
-    "* A continuación se creará un archivo de texto *alumno.json* y el objeto correspondiente será llamado *archivo*.\n",
-    "* El resultado de aplicar *json.dump()* al objeto *alumno* será guardado en el archivo de texto."
+    "* A continuación se creará un archivo de texto ```alumno.json``` y el objeto correspondiente será llamado ```archivo```.\n",
+    "* El resultado de aplicar ```json.dump()``` al objeto ```alumno``` será guardado en el archivo de texto."
    ]
   },
   {
@@ -236,14 +240,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### La función *json.load()*.\n",
-    "Lee el contenido de un archivo que contiene información en formato *JSON* y la transforma en un objeto de tipo _dict_.\n",
+    "#### La función ```json.load()```.\n",
+    "Lee el contenido de un archivo que contiene información en formato *JSON* y la transforma en un objeto de tipo ```dict```.\n",
     "\n",
     "**Sintaxis:**\n",
     "\n",
     "```\n",
     "json.load(<archivo>)\n",
-    "```"
+    "```\n",
+    "\n",
+    "Donde:\n",
+    "\n",
+    "* ```<archivo>``` corresponde a un objeto creado mediante la función ```open()``` en modo de lectura."
    ]
   },
   {
@@ -252,8 +260,8 @@
    "source": [
     "**Ejemplo:**\n",
     "\n",
-    "* La siguiente celda accederá al archivo de texto *alumno.txt* y el objeto correspondiente será llamado *archivo*.\n",
-    "* Al aplicar *json.load()* al objeto *alumno* se creará un objeto de tipo *dict*, el que se le asignará el nombre *otro_estudiante*."
+    "* La siguiente celda accederá al archivo de texto ```alumno.json``` y el objeto correspondiente será llamado ```archivo```.\n",
+    "* Al aplicar ```json.load()``` al objeto ```alumno``` se creará un objeto de tipo ```dict```, el que se le asignará el nombre ```otro_estudiante```."
    ]
   },
   {
@@ -297,9 +305,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Incompatibilidad con objetos *bytes*.\n",
+    "## Incompatibilidad con objetos ```bytes```.\n",
     "\n",
-    "Las herramientas de *JSON* no pueden transformar objeto de tipo *bytes* y al intentarlo se levantará una excepción *TypeError*."
+    "Las herramientas de *JSON* no pueden transformar objeto de tipo ```bytes``` y al intentarlo se levantará una excepción ```TypeError```."
    ]
   },
   {
@@ -322,9 +330,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## La clase *django.http.JsonResponse*.\n",
+    "## La clase ```django.http.JsonResponse```.\n",
     "\n",
-    "La clase *django.http.JsonResponse* le permite a una función de vista regresar una respuesta en formato *JSON* a partir de un objeto *dict* de Python.\n",
+    "La clase ```django.http.JsonResponse``` es una subclase de ```django.http.JsonResponse```, la cual permite que una función de vista regrese una respuesta en formato *JSON* a partir de un objeto ```dict```.\n",
     "\n",
     "``` python\n",
     "JsonResponse(<objeto>)\n",
@@ -337,14 +345,14 @@
    "source": [
     "**Ejemplo:**\n",
     "\n",
-    "El archivo *src/09/urls.py* incluye una ruta apuntando a *main/path* y ligándola a la función de vista *views.respuesta_json()*.\n",
+    "El archivo ```src/09/urls.py``` incluye una ruta apuntando a ```main/path```, ligándola a la función de vista ```views.respuesta_json()```.\n",
     "\n",
     "``` python\n",
     "from django.urls import path, re_path \n",
     "from . import views\n",
     "\n",
     "urlpatterns = [path('', views.index, name=\"inicio\"), \n",
-    "               path('calif', views.calificaciones),\n",
+    "               path('vista', views.vista),\n",
     "               re_path(r'^claves/(?P<clave>[0-9]{4}$)', views.clave),\n",
     "               path('claves/<int:numero>', views.numero),\n",
     "               path('claves/<str:nombre>', views.saluda),\n",
@@ -356,7 +364,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* La siguiente celda sustituirá al archivo *tutorial/main/urls.py* con el archivo *src/09/urls.py*."
+    "* A continuación se sustituirá al archivo ```tutorial/main/urls.py* con el archivo *src/09/urls.py*."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Para la plataforma GNU/Linux o MacOS X."
    ]
   },
   {
@@ -369,33 +384,56 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Para la plataforma Windows."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "%cat tutorial/main/urls.py"
+    "%copy src\\09\\urls.py tutorial\\main\\urls.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pycat tutorial/main/urls.py"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "El archivo *src/09/views.py* incluye a la función de vista *respuesta_json()* con el siguiente código:\n",
+    "El archivo ```src/09/views.py``` incluye a la función de vista ```respuesta_json()``` con el siguiente código:\n",
     "\n",
     "``` python\n",
-    "def respuesta_json(request):\n",
-    "    \n",
-    "    return JsonResponse({'tipo contenido':request.content_type, 'metodo':request.method, 'ruta':request.path})\n",
+    "def respuesta_json(request):    \n",
+    "    return JsonResponse({'tipo contenido':request.content_type, 'metodo':request.method, 'ruta':request.path, 'argumentos':request.GET.dict()})\n",
     "```\n",
-    "Esta función regresa un objeto instanciado de *django.http.JsonResponse*, el cual contiene algunos atributos del objeto *request* que se ingresa como argumento."
+    "\n",
+    "Esta función regresa un objeto instanciado de ```django.http.JsonResponse```, el cual contiene algunos atributos del objeto ```request``` que se ingresa como argumento."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* La siguiente celda sustituirá al archivo *tutorial/main/views.py* con el archivo *src/09/views.py*."
+    "* A continuación se sustituirá al archivo ```tutorial/main/views.py``` con el archivo ```src/09/views.py```."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Para la plataforma GNU/Linux y MacOS X."
    ]
   },
   {
@@ -408,12 +446,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Para la plataforma Windows."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "%cat tutorial/main/views.py"
+    "%copy src\\09\\views.py tutorial\\main\\views.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pycat tutorial/main/views.py"
    ]
   },
   {
@@ -429,7 +483,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%cd tutorial/"
+    "%cd tutorial"
    ]
   },
   {
@@ -451,14 +505,16 @@
    },
    "outputs": [],
    "source": [
-    "! ./manage.py runserver 0.0.0.0:5000"
+    "!python manage.py runserver 0.0.0.0:5000"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "El resultado puede observarser en http://localhost:5000/main/json"
+    "El resultado puede observarser en http://localhost:5000/main/json\n",
+    "\n",
+    "El resultado puede observarser en http://localhost:5000/main/json?nombre=juan&apellido=perez"
    ]
   },
   {
@@ -486,7 +542,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
